--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "Sedalit\\PhpChallenges\\": "src/"
         }
     },
+    "autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
+		}
+	},
     "authors": [
         {
             "name": "Vladislav Agarkov",
