--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "autoload": {
         "psr-4": {
             "Sedalit\\PhpChallenges\\": "src/"
-        }
+        },
+        "files": [
+            "src/Basic/BinarySum.php"
+        ]
     },
     "autoload-dev": {
 		"psr-4": {
