Add fibonacci challenge

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         },
         "files": [
             "src/Basic/BinarySum.php",
-            "src/Basic/IsPowerOfThree.php"
+            "src/Basic/IsPowerOfThree.php",
+            "src/Basic/Fibonacci.php"
         ]
     },
     "autoload-dev": {
