Add addDigits challenge

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "files": [
             "src/Basic/BinarySum.php",
             "src/Basic/IsPowerOfThree.php",
-            "src/Basic/Fibonacci.php"
+            "src/Basic/Fibonacci.php",
+            "src/Basic/AddDigits.php"
         ]
     },
     "autoload-dev": {
