--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
             "src/Basic/AddDigits.php",
             "src/Basic/IsBracketsBalanced.php",
             "src/Basic/IsPerfectNumber.php",
-            "src/Basic/IsHappyTicket.php"
+            "src/Basic/IsHappyTicket.php",
+            "src/Basic/FizzBuzz.php"
         ]
     },
     "autoload-dev": {
