--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
             "src/Basic/IsBracketsBalanced.php",
             "src/Basic/IsPerfectNumber.php",
             "src/Basic/IsHappyTicket.php",
-            "src/Basic/FizzBuzz.php"
+            "src/Basic/FizzBuzz.php",
+            "src/Arrays/Exchange.php"
         ]
     },
     "autoload-dev": {
