--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
             "src/Basic/IsPerfectNumber.php",
             "src/Basic/IsHappyTicket.php",
             "src/Basic/FizzBuzz.php",
-            "src/Arrays/Exchange.php"
+            "src/Arrays/Exchange.php",
+            "src/Arrays/IsContinuousSequence.php"
         ]
     },
     "autoload-dev": {
