--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
             "src/Arrays/Exchange.php",
             "src/Arrays/IsContinuousSequence.php",
             "src/Arrays/CalculateAverage.php",
-            "src/Arrays/GetTotalAmount.php"
+            "src/Arrays/GetTotalAmount.php",
+            "src/Arrays/GetSameParity.php"
         ]
     },
     "autoload-dev": {
