--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
             "src/Arrays/IsContinuousSequence.php",
             "src/Arrays/CalculateAverage.php",
             "src/Arrays/GetTotalAmount.php",
-            "src/Arrays/GetSameParity.php"
+            "src/Arrays/GetSameParity.php",
+            "src/Arrays/GetSuperSeriesWinner.php"
         ]
     },
     "autoload-dev": {
