--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
             "src/Arrays/GetTotalAmount.php",
             "src/Arrays/GetSameParity.php",
             "src/Arrays/GetSuperSeriesWinner.php",
-            "src/Arrays/MakeCensored.php"
+            "src/Arrays/MakeCensored.php",
+            "src/Arrays/GetSameCount.php"
         ]
     },
     "autoload-dev": {
