--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
             "src/Arrays/GetSuperSeriesWinner.php",
             "src/Arrays/MakeCensored.php",
             "src/Arrays/GetSameCount.php",
-            "src/Arrays/BubbleSort.php"
+            "src/Arrays/BubbleSort.php",
+            "src/Arrays/CheckIfBalanced.php"
         ]
     },
     "autoload-dev": {
