Add getIntersectionOfSortedArrays challenge

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
             "src/Arrays/MakeCensored.php",
             "src/Arrays/GetSameCount.php",
             "src/Arrays/BubbleSort.php",
-            "src/Arrays/CheckIfBalanced.php"
+            "src/Arrays/CheckIfBalanced.php",
+            "src/Arrays/GetIntersectionOfSortedArrays.php"
         ]
     },
     "autoload-dev": {
