--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "src/Arrays/CheckIfBalanced.php",
             "src/Arrays/GetIntersectionOfSortedArrays.php",
             "src/Arrays/GetTheNearestLocation.php",
-            "src/Arrays/Flatten.php"
+            "src/Arrays/Flatten.php",
+            "src/Arrays/GetChunked.php"
         ]
     },
     "autoload-dev": {
