--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
             "src/Arrays/GetTheNearestLocation.php",
             "src/Arrays/Flatten.php",
             "src/Arrays/GetChunked.php",
-            "src/Arrays/SliceAndReverse.php"
+            "src/Arrays/SliceAndReverse.php",
+            "src/Arrays/PascaleTriangle.php"
         ]
     },
     "autoload-dev": {
