--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "src/Arrays/Flatten.php",
             "src/Arrays/GetChunked.php",
             "src/Arrays/SliceAndReverse.php",
-            "src/Arrays/PascaleTriangle.php"
+            "src/Arrays/PascaleTriangle.php",
+            "src/Arrays/LengthOfLastWord.php"
         ]
     },
     "autoload-dev": {
