--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,25 @@
             "src/Basic/IsBracketsBalanced.php",
             "src/Basic/IsPerfectNumber.php",
             "src/Basic/IsHappyTicket.php",
-            "src/Basic/FizzBuzz.php"
+            "src/Basic/FizzBuzz.php",
+            "src/Arrays/Exchange.php",
+            "src/Arrays/IsContinuousSequence.php",
+            "src/Arrays/CalculateAverage.php",
+            "src/Arrays/GetTotalAmount.php",
+            "src/Arrays/GetSameParity.php",
+            "src/Arrays/GetSuperSeriesWinner.php",
+            "src/Arrays/MakeCensored.php",
+            "src/Arrays/GetSameCount.php",
+            "src/Arrays/BubbleSort.php",
+            "src/Arrays/CheckIfBalanced.php",
+            "src/Arrays/GetIntersectionOfSortedArrays.php",
+            "src/Arrays/GetTheNearestLocation.php",
+            "src/Arrays/Flatten.php",
+            "src/Arrays/GetChunked.php",
+            "src/Arrays/SliceAndReverse.php",
+            "src/Arrays/PascaleTriangle.php",
+            "src/Arrays/LengthOfLastWord.php",
+            "src/Arrays/SummaryRanges.php"
         ]
     },
     "autoload-dev": {
