Add pickFromArray challenge

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "Sedalit\\PhpChallenges\\": "src/"
         },
         "files": [
+            "src/AssociativeArrays/PickFromArray.php"
         ]
     },
     "autoload-dev": {
