Install funct/funct dependency

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,7 @@
             "email": "hello.agarkov@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "funct/funct": "^1.5"
+    }
 }
