--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "files": [
             "src/Functions/Average.php",
             "src/Functions/Last.php",
-            "src/Functions/TakeOldest.php"
+            "src/Functions/TakeOldest.php",
+            "src/Functions/GetChildren.php"
         ]
     },
     "autoload-dev": {
