--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
             "src/Functions/GetGirlFriends.php",
             "src/Functions/GetMenCountByYear.php",
             "src/Functions/GetFreeDomainsCount.php",
-            "src/Functions/GetManWithLeastFriends.php"
+            "src/Functions/GetManWithLeastFriends.php",
+            "src/Functions/Without.php"
         ]
     },
     "autoload-dev": {
