Add filterAnagrams challenge

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
             "src/Functions/GetManWithLeastFriends.php",
             "src/Functions/Without.php",
             "src/Functions/FindIndexOfNearest.php",
-            "src/Functions/GetSameParity.php"
+            "src/Functions/GetSameParity.php",
+            "src/Functions/FilterAnagrams.php"
         ]
     },
     "autoload-dev": {
