Add hexToRGB challenge

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
             "src/Functions/Without.php",
             "src/Functions/FindIndexOfNearest.php",
             "src/Functions/GetSameParity.php",
-            "src/Functions/FilterAnagrams.php"
+            "src/Functions/FilterAnagrams.php",
+            "src/Functions/HexToRGB.php"
         ]
     },
     "autoload-dev": {
