Add rational challenge

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "src/DataAbstraction/CalculateDistance.php",
             "src/DataAbstraction/Points.php",
             "src/DataAbstraction/Segments.php",
-            "src/DataAbstraction/Rectangle.php"
+            "src/DataAbstraction/Rectangle.php",
+            "src/DataAbstraction/Rational.php"
         ]
     },
     "autoload-dev": {
